--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.465.0",
     "mongoose": "^8.8.3",
-    "next": "15.0.3",
+    "next": "^15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
