--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.6.0",
+    "@clerk/nextjs": "^6.36.5",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@uploadthing/react": "^7.1.2",
+    "@uploadthing/react": "^7.3.3",
+    "@upstash/redis": "^1.36.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.465.0",
     "mongoose": "^8.8.3",
-    "next": "15.1.11",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.53.2",
     "sonner": "^2.0.3",
     "svix": "^1.44.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^7.4.0",
+    "uploadthing": "^7.7.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
